refactor(controllers): 简化@PathVariable注解格式
- 统一移除所有控制器方法中@PathVariable注解的名称指定，使用简化写法
- 优化代码一致性，提升代码简洁度及可读性
- 涉及多个模块如内容管理、权限、用户、AI、上传等控制器
- 保持接口功能不变，仅调整注解参数写法格式